# FeatureTogglesPlusPlus

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/FeatureTogglesPlusPlus/: CMakeLists.txt  FeatureDefines.xdef  version.h
include/FeaturesTogglePlusPlus/: FeatureToggles.h  projectname.h
src/: CMakeLists.txt  Feature.cpp  Feature.h  FeatureDefines.def  FeatureDefinesMacros.def  FeatureDefinesMacros.xdef  FeatureToggle.cpp  FeatureToggle.h  FeatureToggles.cpp  FeatureToggles.h  libraryinfo.h  libraryinfo.h.in.cmake  main.cpp  version.cpp
test/: CMakeLists.txt  sanity_check.cpp  test.h
tools/share/cmake/: gmock.cmake
userdocs/: conf.py  make.bat
userdocs/_build/doctrees/: environment.pickle  index.doctree
userdocs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
userdocs/_build/html/_sources/: index.txt
