FILE (GLOB_RECURSE project_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp *.xdef)
SET (project_BIN ${PROJECT_NAME})

ADD_DEFINITIONS(-std=c++98)

ADD_LIBRARY(project_BIN STATIC ${project_SRCS})
TARGET_LINK_LIBRARIES(project_BIN ${project_LIBS})
SET_TARGET_PROPERTIES(project_BIN PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)
INSTALL(TARGETS project_BIN DESTINATION lib)

